# Codeatrium

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.ja.md  README.md  REFACTOR.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  claude-code-review.yml  publish.yml
scripts/: generate-banner.sh
src/codeatrium/: __init__.py  __main__.py  cli.py  config.py  db.py  distiller.py  embedder.py  embedder_server.py  hooks.py  indexer.py  llm.py  models.py  paths.py  resolver.py  search.py
src/codeatrium/cli/: __init__.py  distill_cmd.py  hook_cmd.py  index_cmd.py  prime_cmd.py  search_cmd.py  server_cmd.py  show_cmd.py  status_cmd.py
src/logo/: cli.py  db.py  distiller.py  embedder.py  embedder_server.py  indexer.py  search.py
tests/: test_config.py  test_db.py  test_distiller.py  test_embedder.py  test_index_cmd.py  test_indexer.py  test_init.py  test_paths.py  test_resolver.py  test_search.py  test_search_phase2.py  test_security.py  test_server_cmd.py  test_show_dump.py  test_status_hook.py
