[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeatrium"
version = "0.1.0"
description = "CLI-first memory layer for AI coding agents"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0",
    "sentence-transformers>=3.0.0",
    "sqlite-vec>=0.1.0",
    "tree-sitter>=0.23.0,<0.24.0",
    "tree-sitter-python>=0.23.0,<0.24.0",
    "tree-sitter-typescript>=0.23.0,<0.24.0",
    "tree-sitter-go>=0.23.0,<0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[project.scripts]
loci = "codeatrium.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/codeatrium"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (未使用 import 等)
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = ["E501"]  # 行長制限はなし

[tool.ruff.format]
quote-style = "double"
