[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeatrium"
version = "0.1.0"
description = "Memory palace for AI coding agents — index sessions, recall code context in <0.2s"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "senna-lang", email = "senna-lang@users.noreply.github.com" },
]
keywords = [
    "ai",
    "coding-agent",
    "memory",
    "semantic-search",
    "claude",
    "developer-tools",
    "cli",
    "conversation-history",
    "code-context",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer[all]>=0.12.0",
    "sentence-transformers>=3.0.0",
    "sqlite-vec>=0.1.0",
    "tree-sitter>=0.23.0,<0.24.0",
    "tree-sitter-python>=0.23.0,<0.24.0",
    "tree-sitter-typescript>=0.23.0,<0.24.0",
    "tree-sitter-go>=0.23.0,<0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[project.scripts]
loci = "codeatrium.cli:app"

[project.urls]
Homepage = "https://github.com/senna-lang/codeatrium"
Repository = "https://github.com/senna-lang/codeatrium"
Issues = "https://github.com/senna-lang/codeatrium/issues"

[tool.hatch.build.targets.sdist]
exclude = [
    "CLAUDE.md",
    "AGENTS.md",
    ".github/",
    ".logosyncx/",
    "docs/internal/",
    "mem/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codeatrium"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (未使用 import 等)
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = ["E501"]  # 行長制限はなし

[tool.ruff.format]
quote-style = "double"
